# youtube-to-text

./: LICENSE  README.md  main.py  pyproject.toml  settings.py  transcription.txt
